compiler/toc_hir_lowering/tests/snapshots/lowering__lower_complex_real_literal-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 2.47032822920623272e-324"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..29): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..29): []
        Assign@(FileId(1), 0..29)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..29): Real(0.0)

