compiler/toc_hir_lowering/tests/snapshots/lowering__lower_compound_add_assignment.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: a += b

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..6): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..6): []
        Assign@(FileId(1), 0..6): Add
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 5..6): "b"@(FileId(1), 5..6), undeclared

